      flat collection trees, the difference is basically between a small
      incremental scan and a near full rescan.
    * Ask the user for confirmation before refetching lyrics and overwriting
      cached ones.
    * It is now possible to stop editing lyrics without saving changes in
      the lyrics applet.

  BUGFIXES:
    * Correctly set the lyrics applet's title when displaying HTML formatted lyrics
    * Track selection is now correctly preserved when using Dynamic Playlists.
      Patch by John Atkinson <john@fauxnetic.co.uk>. (BR 208349)
    * Cover Manager no longer stops when one cover cannot be fetched. Patch by
      Tycho Andersen <kdebugs@tycho.ws>. (BR 205032)
    * Magnatune.com store: Fixed problematic use of external unzip command
      for unpacking downloaded album zip files. (BR 138499)
    * Magnatune.com store: Download high quality covers when purchasing or 
      downloading albums. (BR 176177)
    * Correctly modify the Lyrics Applet's title when its state changes.


VERSION 2.2
  CHANGES:
    * The MusicBrainz ID of a track is now scrobbled to Last.fm, if it exists.
      (BR 122281)
    * More collection scanning speedups.

  BUGFIXES:
    * Replay gain works on the Phonon Xine backend.
    * Fadeout on track end works again.
    * Fixed regression where the last album to be scanned would not have its
      cover picked up by the collection scanner.
    * Sorting by track length in the playlist is now possible. (BR 208689)
    * Fixed track bookmarks not immediately getting removed from progress bar 
      when they are deleted from the bookmark manager. 
    * Fixed new track bookmarks not getting shown in the progress bar
      immediately.
    * Fixed track bookmarks not getting correctly repainted when resizing 
      progress bar. (BR 207091)
    * Correct a logic bug during incremental scanning that could cause the
      wrong tracks to be removed from the collection, requiring a full rescan.